--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -7,8 +7,8 @@
     <item
         android:id="@+id/menu_setting"
         android:icon="@drawable/ic_round_settings_24"
-        android:iconTint="?attr/colorControlNormal"
         android:title="Storage"
+        app:iconTint="?attr/colorControlNormal"
         app:showAsAction="ifRoom" />
 
 </menu>
